# armymarkdown

./: #docker-compose.yaml#  .dockerignore  .env.example  .gitignore  .htmlhintrc  .pre-commit-config.yaml  .stylelintrc.json  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.development  Dockerfile.production  Makefile  Procfile  README.md  app.py  armymemo-notikz.cls  armymemo.cls  clear-redis-manual.sh  clear-redis.py  constants.py  deploy.sh  docker-compose-dev.yaml  docker-compose.prod.yml  docker-compose.yaml  eslint.config.js  example.tex  forms.py  login.py  memo_template.Amd  monitor-celery.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  server.py  setup.py  test_selenium_runner.py  (+1 more)
.github/workflows/: build-and-publish.yml  deploy.yml  test.yml
app/: constants.py  forms.py  main.py  memo_adapter.py  tasks.py
app/auth/: login.py  oauth.py
app/models/: memo_model.py
app/services/: utils.py  writer.py
app/services/validation/: __init__.py  input_validator.py  memo_model.py  pdf_parser.py  pdf_validator.py  rules.py
armymarkdown/: __main__.py  memo_model.py  utils.py  writer.py
config/: .env.example  .pre-commit-config.yaml  .stylelintrc.json  eslint.config.js
db/: Dockerfile  __init__.py  db.py  schema.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md
examples/: basic_mfr.Amd  basic_mfr_w_table.Amd  long_memo.Amd  memo_extra_features.Amd  memo_for.Amd  memo_multi_for.Amd  memo_thru.Amd  tutorial.Amd
infrastructure/aws/: s3-lifecycle-rules.json
infrastructure/compose/: docker-compose-dev.yaml  docker-compose-production.yaml  docker-compose.yaml
infrastructure/docker/: Dockerfile  Dockerfile.development  supervisord.conf
infrastructure/proxy/: Caddyfile  Caddyfile.local  Dockerfile  nginx.conf
latex/: armymemo-notikz.cls
latex_sandbox/: armymemo-notikz.cls
latex_sandbox/latex/: armymemo-notikz.cls  armymemo.cls  saved.cls
proxy/: #conf#  nginx.conf
resources/examples/: additional_duty_appointment.Amd  cif_turn_in.Amd  cq_sop.Amd  leave_pass_policy.Amd  long_memo.Amd  lost_cac_card.Amd  memo_multi_for.Amd  tutorial.Amd
resources/latex/: armymemo-notikz.cls
scripts/: celery.sh  check-lint-consistency.sh  clear-redis-manual.sh  deploy.sh  server-setup.sh
static/: auto-save.js  batch-upload.js  form-validation.js  form.js  history.js  index.js  keyboard-shortcuts.js  live-review.js  pdf-validation.js  spellcheck.js  tasks.js  text-editor-validation.js  validation-rules.js
static/css/: custom.css  modern.css
static/dictionaries/: en_US.aff  military-terms.txt
static/lib/: typo.js
static/src-min/: ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js  mode-armymarkdown.js
static/src-min/snippets/: armymarkdown.js
templates/: base.html  example_list.html  history.html  index.html  live_review_panel.html  login.html  memo_form.html  profile.html  register.html  validate.html  validation_history.html  validation_result.html
tests/: answer_test_tex_output_basic.tex  conftest.py  expected_basic_mfr.tex  expected_basic_mfr_w_table.tex  expected_long_memo.tex  expected_memo_extra_features.tex  expected_memo_for.tex  expected_memo_multi_for.tex  expected_memo_thru.tex  expected_tutorial.tex  selenium_utils.py  template.Amd  test_authentication.py  test_authentication.py.bak2  test_authentication.py.bak3  test_authentication_simple.py  test_auto_save.py  test_example_memos.py  test_flask_app.py  test_flask_app.py.bak2  test_flask_app.py.bak3  test_forms.py  test_forms.py.bak2  test_forms.py.bak5  test_general.py  test_input_validation.py  test_integration.py  test_integration.py.bak2  test_integration.py.bak3  test_keyboard_shortcuts.py  test_latex_escape_chars.py  test_memo_adapter.py  test_memo_model_comprehensive.py  test_pdf_generation_e2e.py  test_pdf_validation.py  test_selenium_e2e.py  test_tasks_typst.py  test_ui_selenium.py  test_validation_integration.py
