[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["armymarkdown*"]
exclude = ["tests*", "docs*", "examples*"]

[project]
name = "armymarkdown"
version = "1.0.0"
description = "A tool for generating Army memorandums from markdown-like syntax"
readme = "README.md"
authors = [
    {name = "Joe Schlessinger", email = "jschless@example.com"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Government",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["army", "memo", "markdown", "latex", "military"]
requires-python = ">=3.11"
dependencies = [
    # Core Flask application dependencies
    "flask>=3.0.0",
    "flask-wtf>=1.2.0",
    "flask-login>=0.6.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-talisman>=1.1.0",
    "wtforms>=3.1.0",

    # Database and ORM
    "sqlalchemy>=2.0.0",

    # Task queue and background processing (Huey with SQLite backend)
    "huey>=2.5.0",

    # AWS integration
    "boto3>=1.35.0",

    # Web server
    "gunicorn>=23.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "language-tool-python>=2.8.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",

    # Email validation
    "email-validator>=2.2.0",

    # PDF parsing and validation
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    # Code quality and formatting
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",

    # Security scanning
    "bandit>=1.8.0",
    "safety>=3.2.0",

    # Testing framework and utilities
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-flask>=1.3.0",
    "pytest-xdist>=3.6.0",
    "pytest-forked>=1.6.0",
    "coverage>=7.6.0",

    # Test data generation
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "freezegun>=1.5.0",

    # HTTP mocking
    "responses>=0.25.0",
    "moto>=5.0.0",

    # Flask testing utilities
    "flask-testing>=0.8.1",

    # Type stubs
    "types-requests>=2.32.0",
    "types-python-dateutil>=2.9.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-flask>=1.3.0",
    "pytest-xdist>=3.6.0",
    "pytest-forked>=1.6.0",
    "coverage>=7.6.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "freezegun>=1.5.0",
    "responses>=0.25.0",
    "moto>=5.0.0",
    "flask-testing>=0.8.1",
]

[project.urls]
Homepage = "https://github.com/jschless/armymarkdown"
Repository = "https://github.com/jschless/armymarkdown"
Issues = "https://github.com/jschless/armymarkdown/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
# Plus selected additional rules for code quality
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules that might be too restrictive for existing codebase
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "N806",    # Variable in function should be lowercase (for compatibility)
    "SIM108",  # Use ternary operator (sometimes less readable)
]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "assets",
    "static/uploads",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["armymarkdown"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and unused imports
"tests/*" = ["PLR2004", "S101", "F401", "ARG", "FBT"]
# Allow print statements in scripts
"scripts/*" = ["T201"]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "node_modules/*",
    "assets/*",
    "static/uploads/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]


# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "node_modules"]
